Small layout issue

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -192,7 +192,7 @@ footer {
     left: 1rem;
     background-color: white;
     /* padding-right: 10rem; */
-    margin-bottom: 25rem;
+    margin-bottom: 20rem;
 }
 #featured-event-day {
     color: #FF227F;
